--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -16,7 +16,7 @@
             padding: 0;
         }
         
-        ssssss .main-header {
+         .main-header {
             display: flex;
             justify-content: space-between;
             align-items: center;
