--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -481,8 +481,9 @@
             <button class="menu-btn">☰</button>
             <button class="lang-btn">DITR</button>
             <button class="clock-btn">🕒</button>
-            <button class="settings-btn">⚙️</button>
+            <button class="settings-btn">⚙️</button> test push main
         </div>
+        <br><br>
     </header>
 
     <div class="weather-card">
@@ -502,10 +503,13 @@
 
             <div class="details-section">
                 <div class="wind">Wind: 13 km/h</div>
-                <div class="aqi">AQI: 85 (Moderate)</div>
+                <div id="aqi" class="aqi"></div>
             </div>
         </div>
-
+        <br>
+        <br>
+        <br>
+        <br>
         <div class="hourly-forecast" id="hourly"></div>
 
         <div class="daily-forecast" id="daily"></div>
