--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -40,6 +40,7 @@
     <div class="weather-card">
         <div class="card-header">
             <span class="date">Monday, Jan 26</span>
+            <div id="current-city" class="city-name"></div>
         </div>
 
         <div class="weather-content">
