--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -1,72 +1,66 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="js/app.js"></script>
-    <script src="js/weather-map.js"></script>
-    <script src="js/weather-utils.js"></script>
     <title>weather</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-<body>
-
+  <body>
     <header class="main-header">
-        <div class="logo">AuraWeather</div>
+      <div class="logo">AuraWeather</div>
 
-        <div class="search-bar">
-            <input type="text" placeholder="Search City...🔍" id="search-input">
+      <div class="search-bar">
+        <input type="text" placeholder="Search City...🔍" id="search-input" />
+      </div>
+
+      <div class="header-icons">
+        <div class="lang-selector">
+          <button class="lang-btn active" data-lang="tr">Tr</button>
+          <button class="lang-btn" data-lang="fa">Ir</button>
+          <button class="lang-btn" data-lang="en">En</button>
         </div>
 
-        <div class="header-icons">
-            <div class="lang-selector">
-                <button class="lang-btn active" data-lang="tr">Tr</button>
-                <button class="lang-btn" data-lang="fa">Ir</button>
-                <button class="lang-btn" data-lang="en">En</button>
-            </div>
+        <button class="sound-btn" id="sound-toggle">
+          <span class="sound-icon">🔊</span>
+        </button>
 
-            <button class="sound-btn" id="sound-toggle">
-                <span class="sound-icon">🔊</span>
-            </button>
-
-            <button class="theme-btn" id="theme-toggle">
-                <span class="theme-icon">🌙</span>
-            </button>
-        </div>
+        <button class="theme-btn" id="theme-toggle">
+          <span class="theme-icon">🌙</span>
+        </button>
+      </div>
     </header>
 
     <div class="weather-card">
-        <div class="card-header">
-            <span class="date">Monday, Jan 26</span>
-            <div id="current-city" class="city-name"></div>
+      <div class="card-header">
+        <span class="date">Monday, Jan 26</span>
+        <div id="current-city" class="city-name"></div>
+      </div>
+
+      <div class="weather-content">
+        <div class="temp-section">
+          <div class="temperature" id="current-temp"></div>
+          <div class="condition" id="current-condition"></div>
         </div>
 
-        <div class="weather-content">
-            <div class="temp-section">
-                <div class="temperature" id="current-temp"></div>
-                <div class="condition" id="current-condition"></div>
+        <div class="weather-icon" id="current-icon"></div>
 
-            </div>
-
-            <div class="weather-icon" id="current-icon"></div>
-
-
-            <div class="details-section">
-                <div class="wind">Wind: 13 km/h</div>
-                <div id="aqi" class="aqi"></div>
-            </div>
+        <div class="details-section">
+          <div class="wind">Wind: 13 km/h</div>
+          <div id="aqi" class="aqi"></div>
         </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <div class="hourly-forecast" id="hourly"></div>
+      </div>
+      <br />
+      <br />
+      <br />
+      <br />
+      <div class="hourly-forecast" id="hourly"></div>
 
-        <div class="daily-forecast" id="daily"></div>
+      <div class="daily-forecast" id="daily"></div>
 
-        <!-- <div class="chart-container">
+      <!-- <div class="chart-container">
             <div class="chart-title">City Comparison - Air Quality & Weather</div>
             <div class="chart">
                 <div class="bar-group">
@@ -123,8 +117,8 @@
                 </div>
             </div> -->
     </div>
-
-    <script src="js/style.js"></script>
-</body>
-
+    <script src="js/app.js"></script>
+    <script src="js/weather-map.js"></script>
+    <script src="js/weather-utils.js"></script>
+  </body>
 </html>
