--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -4,11 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="js/app.js"></script>
+
     <script src="js/weather-map.js"></script>
-    <script src="js/weather-utils.js"></script>
+
     <title>weather</title>
+
     <link rel="stylesheet" href="css/style.css">
+
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
 </head>
 
 <body>
@@ -124,6 +127,23 @@
             </div> -->
     </div>
 
+    <div class="map-section">
+        <div class="map-header-inline">
+            <div class="map-title">
+                <span class="map-icon">🗺️</span>
+                <h3>select the city</h3>
+            </div>
+            <span class="map-hint">Click on the map to view the weather.</span>
+        </div>
+        <div id="weather-map">
+
+        </div>
+    </div>
+
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <script src="js/weather-utils.js"></script>
+    <script src="js/map.js"></script>
+    <script src="js/app.js"></script>
     <script src="js/style.js"></script>
 </body>
 
