--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -4,17 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     
 
     <script src="js/weather-map.js"></script>
 
     <title>weather</title>
 
     <link rel="stylesheet" href="css/style.css">
+     <link href="my-project/src/style.css" rel="stylesheet">
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
 </head>
 
 <body>
+    
 
     <header class="main-header">
         <div class="logo">AuraWeather</div>
@@ -28,6 +31,7 @@
                 <button class="lang-btn active" data-lang="tr">Tr</button>
                 <button class="lang-btn" data-lang="fa">Ir</button>
                 <button class="lang-btn" data-lang="en">En</button>
+                <p class="text-red-300">fgkgn</p>
             </div>
 
             <button class="sound-btn" id="sound-toggle">
