--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -1,70 +1,75 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <script src="js/weather-map.js"></script>
 
     <title>weather</title>
 
-    <link rel="stylesheet" href="css/style.css">
-     <link href="my-project/src/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css" />
+    <link href="./src/output.css" rel="stylesheet" />
 
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
-</head>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    />
+  </head>
 
-<body>
-    
-
+  <bod>
     <header class="main-header">
-        <div class="logo">AuraWeather</div>
+      <div class="logo text-blue-700">AuraWeather</div>
 
-        <div class="search-bar">
-            <input type="text" placeholder="Search City...🔍" id="search-input">
+      <div class="search-bar">
+        <input type="text" placeholder="Search City...🔍" id="search-input" />
+      </div>
+
+      <div class="header-icons">
+        <div class="lang-selector">
+          <button class="lang-btn active" data-lang="tr">Tr</button>
+          <button class="lang-btn" data-lang="fa">Ir</button>
+          <button class="lang-btn" data-lang="en">En</button>
         </div>
 
-        <div class="header-icons">
-            <button class="menu-btn">☰</button>
-            <button class="lang-btn">DITR</button>
-            <button class="clock-btn">🕒</button>
-            <button class="settings-btn">⚙️</button>
-            test push main
-        </div>
+        <button class="sound-btn" id="sound-toggle">
+          <span class="sound-icon">🔊</span>
+        </button>
+
+        <button class="theme-btn" id="theme-toggle">
+          <span class="theme-icon">🌙</span>
+        </button>
+      </div>
     </header>
 
     <div class="weather-card">
-        <div class="card-header">
-            <span class="date">Monday, Jan 26</span>
-            <div id="current-city" class="city-name"></div>
+      <div class="card-header">
+        <span class="date">Monday, Jan 26</span>
+        <div id="current-city" class="city-name"></div>
+      </div>
+
+      <div class="weather-content">
+        <div class="temp-section">
+          <div class="temperature" id="current-temp"></div>
+          <div class="condition" id="current-condition"></div>
         </div>
 
-        <div class="weather-content">
-            <div class="temp-section">
-                <div class="temperature" id="current-temp"></div>
-                <div class="condition" id="current-condition"></div>
+        <div class="weather-icon" id="current-icon"></div>
 
-            </div>
-
-            <div class="weather-icon" id="current-icon"></div>
-
-
-            <div class="details-section">
-                <div class="wind">Wind: 13 km/h</div>
-                <div id="aqi" class="aqi"></div>
-            </div>
+        <div class="details-section">
+          <div class="wind">Wind: 13 km/h</div>
+          <div id="aqi" class="aqi"></div>
         </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <div class="hourly-forecast" id="hourly"></div>
+      </div>
+      <br />
+      <br />
+      <br />
+      <br />
+      <div class="hourly-forecast" id="hourly"></div>
 
-        <div class="daily-forecast" id="daily"></div>
+      <div class="daily-forecast" id="daily"></div>
 
-        <!-- <div class="chart-container">
+      <!-- <div class="chart-container">
             <div class="chart-title">City Comparison - Air Quality & Weather</div>
             <div class="chart">
                 <div class="bar-group">
@@ -123,22 +128,19 @@
     </div>
 
     <div class="map-section">
-        <div class="map-header-inline">
-            <div class="map-title">
-                <span class="map-icon">🗺️</span>
-                <h3>select the city</h3>
-            </div>
-            <span class="map-hint">Click on the map to view the weather.</span>
+      <div class="map-header-inline">
+        <div class="map-title">
+          <span class="map-icon">🗺️</span>
+          <h3>select the city</h3>
         </div>
-        <div id="weather-map">
-
-        </div>
+        <span class="map-hint">Click on the map to view the weather.</span>
+      </div>
+      <div id="weather-map"></div>
     </div>
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="js/weather-utils.js"></script>
     <script src="js/map.js"></script>
     <script src="js/app.js"></script>
-</body>
-
+  </bod>
 </html>
