--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -8,139 +8,91 @@
 
     <title>weather</title>
 
-    <link rel="stylesheet" href="css/style.css" />
-    <link href="./src/output.css" rel="stylesheet" />
+    
+    <script src="https://cdn.tailwindcss.com"></script>
 
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-    />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   </head>
 
-  <bod>
-    <header class="main-header">
-      <div class="logo text-blue-700">AuraWeather</div>
+  <body class="bg-gray-900 text-white font-sans min-h-screen">
 
-      <div class="search-bar">
-        <input type="text" placeholder="Search City...🔍" id="search-input" />
+    <header class="flex justify-between items-center px-6 py-4 bg-gray-800 shadow-lg rounded-b-2xl">
+      <div class="text-3xl font-bold tracking-wide text-cyan-400">
+        AuraWeather
       </div>
 
-      <div class="header-icons">
-        <div class="lang-selector">
-          <button class="lang-btn active" data-lang="tr">Tr</button>
-          <button class="lang-btn" data-lang="fa">Ir</button>
-          <button class="lang-btn" data-lang="en">En</button>
+      <div class="flex items-center space-x-4">
+        <div class="relative">
+          <input type="text" id="search-input" placeholder="Search City...🔍"
+            class="px-4 py-2 rounded-lg bg-gray-700 text-white placeholder-gray-400
+            focus:outline-none focus:ring-2 focus:ring-cyan-400 transition duration-300">
         </div>
 
-        <button class="sound-btn" id="sound-toggle">
-          <span class="sound-icon">🔊</span>
-        </button>
+        <div class="flex space-x-2">
+          <button class="px-3 py-1 rounded-md bg-gray-700 hover:bg-gray-600 transition">Tr</button>
+          <button class="px-3 py-1 rounded-md bg-gray-700 hover:bg-gray-600 transition">Ir</button>
+          <button class="px-3 py-1 rounded-md bg-gray-700 hover:bg-gray-600 transition">En</button>
+        </div>
 
-        <button class="theme-btn" id="theme-toggle">
-          <span class="theme-icon">🌙</span>
-        </button>
+        <div class="flex space-x-2">
+          <button class="p-2 rounded-full bg-gray-700 hover:bg-gray-600 transition">
+            <span class="text-lg">🔊</span>
+          </button>
+          <button class="p-2 rounded-full bg-gray-700 hover:bg-gray-600 transition">
+            <span class="text-lg">🌙</span>
+          </button>
+        </div>
       </div>
     </header>
 
-    <div class="weather-card">
-      <div class="card-header">
-        <span class="date">Monday, Jan 26</span>
-        <div id="current-city" class="city-name"></div>
-      </div>
-
-      <div class="weather-content">
-        <div class="temp-section">
-          <div class="temperature" id="current-temp"></div>
-          <div class="condition" id="current-condition"></div>
+    <main class="p-6">
+      <div class="weather-card bg-gray-800 p-6 rounded-xl shadow-md hover:shadow-lg transition duration-300">
+        <div class="flex justify-between items-center mb-4">
+          <span class="text-gray-400">Monday, Jan 26</span>
+          <div id="current-city" class="text-xl font-semibold"></div>
         </div>
 
-        <div class="weather-icon" id="current-icon"></div>
+        <div class="flex justify-between items-center">
+          <div>
+            <div id="current-temp" class="text-5xl font-bold text-yellow-400"></div>
+            <div id="current-condition" class="text-gray-300 mt-1"></div>
+          </div>
 
-        <div class="details-section">
-          <div class="wind">Wind: 13 km/h</div>
-          <div id="aqi" class="aqi"></div>
+          <div class="w-28 h-28 bg-cover rounded-full shadow-md"
+            id="current-icon"
+            style="background-image: url('path_to_icon');">
+          </div>
+        </div>
+
+        <div class="mt-4 space-y-1">
+          <div class="text-gray-400">Wind: 13 km/h</div>
+          <div id="aqi" class="text-gray-400"></div>
         </div>
       </div>
-      <br />
-      <br />
-      <br />
-      <br />
-      <div class="hourly-forecast" id="hourly"></div>
 
-      <div class="daily-forecast" id="daily"></div>
+      <div class="mt-8">
+        <div id="hourly" class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-4"></div>
+        <div id="daily" class="mt-6 grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-4"></div>
+      </div>
+    </main>
 
-      <!-- <div class="chart-container">
-            <div class="chart-title">City Comparison - Air Quality & Weather</div>
-            <div class="chart">
-                <div class="bar-group">
-                    <div class="bar" style="height: 200px;">
-                        <div class="bar-part aqi" style="height: 30%"></div>
-                        <div class="bar-part clear-days" style="height: 70%; bottom: 30%"></div>
-                    </div>
-                    <div class="city-label">London</div>
-                </div>
-                <div class="bar-group">
-                    <div class="bar" style="height: 150px;">
-                        <div class="bar-part aqi" style="height: 10%"></div>
-                        <div class="bar-part clear-days" style="height: 90%; bottom: 10%"></div>
-                    </div>
-                    <div class="city-label">Paris</div>
-                </div>
-                <div class="bar-group">
-                    <div class="bar" style="height: 100px;">
-                        <div class="bar-part aqi" style="height: 20%"></div>
-                        <div class="bar-part clear-days" style="height: 80%; bottom: 20%"></div>
-                    </div>
-                    <div class="city-label">Berlin</div>
-                </div>
-                <div class="bar-group">
-                    <div class="bar" style="height: 180px;">
-                        <div class="bar-part aqi" style="height: 25%"></div>
-                        <div class="bar-part clear-days" style="height: 75%; bottom: 25%"></div>
-                    </div>
-                    <div class="city-label">Istanbul</div>
-                </div>
-                <div class="bar-group">
-                    <div class="bar" style="height: 50px;">
-                        <div class="bar-part aqi" style="height: 5%"></div>
-                        <div class="bar-part clear-days" style="height: 95%; bottom: 5%"></div>
-                    </div>
-                    <div class="city-label">Dubai</div>
-                </div>
-                <div class="bar-group">
-                    <div class="bar" style="height: 220px;">
-                        <div class="bar-part aqi" style="height: 40%"></div>
-                        <div class="bar-part clear-days" style="height: 60%; bottom: 40%"></div>
-                    </div>
-                    <div class="city-label">Abu Dhabi</div>
-                </div>
-            </div>
-            <div class="chart-legend">
-                <div class="legend-item">
-                    <div class="legend-color" style="background-color: #ff6b6b;"></div>
-                    <span>AQI 60</span>
-                </div>
-                <div class="legend-item">
-                    <div class="legend-color" style="background-color: #4ecdc4;"></div>
-                    <span>Clear Days 79%</span>
-                </div>
-            </div> -->
+    <div class="map-section mt-12 px-6">
+      <div class="flex justify-between items-center mb-4">
+        <div class="flex items-center space-x-2">
+          <span class="text-xl">🗺️</span>
+          <h3 class="text-lg font-semibold">Select the City</h3>
+        </div>
+        <span class="text-sm text-gray-400">Click on the map to view the weather.</span>
+      </div>
+
+      <div id="weather-map" class="h-96 rounded-xl shadow-md"></div>
     </div>
 
-    <div class="map-section">
-      <div class="map-header-inline">
-        <div class="map-title">
-          <span class="map-icon">🗺️</span>
-          <h3>select the city</h3>
-        </div>
-        <span class="map-hint">Click on the map to view the weather.</span>
-      </div>
-      <div id="weather-map"></div>
-    </div>
-
+    
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="js/weather-utils.js"></script>
     <script src="js/map.js"></script>
     <script src="js/app.js"></script>
-  </bod>
+
+  </body>
 </html>
