--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -1,146 +1,143 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <script src="js/weather-map.js"></script>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>weather</title>
+  <script src="js/weather-map.js"></script>
 
-    <link rel="stylesheet" href="css/style.css" />
-    <link href="./src/output.css" rel="stylesheet" />
+  <title>weather</title>
 
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-    />
-  </head>
+  <link rel="stylesheet" href="css/style.css" />
+  <link href="./src/output.css" rel="stylesheet" />
 
-  <bod>
-    <header class="main-header">
-      <div class="logo text-blue-700">AuraWeather</div>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+</head>
 
-      <div class="search-bar">
-        <input type="text" placeholder="Search City...🔍" id="search-input" />
-      </div>
+<body>
+  <header class="main-header">
+    <div class="logo text-blue-700">AuraWeather</div>
 
-      <div class="header-icons">
-        <div class="lang-selector">
-          <button class="lang-btn active" data-lang="tr">Tr</button>
-          <button class="lang-btn" data-lang="fa">Ir</button>
-          <button class="lang-btn" data-lang="en">En</button>
-        </div>
-
-        <button class="sound-btn" id="sound-toggle">
-          <span class="sound-icon">🔊</span>
-        </button>
-
-        <button class="theme-btn" id="theme-toggle">
-          <span class="theme-icon">🌙</span>
-        </button>
-      </div>
-    </header>
-
-    <div class="weather-card">
-      <div class="card-header">
-        <span class="date">Monday, Jan 26</span>
-        <div id="current-city" class="city-name"></div>
-      </div>
-
-      <div class="weather-content">
-        <div class="temp-section">
-          <div class="temperature" id="current-temp"></div>
-          <div class="condition" id="current-condition"></div>
-        </div>
-
-        <div class="weather-icon" id="current-icon"></div>
-
-        <div class="details-section">
-          <div class="wind">Wind: 13 km/h</div>
-          <div id="aqi" class="aqi"></div>
-        </div>
-      </div>
-      <br />
-      <br />
-      <br />
-      <br />
-      <div class="hourly-forecast" id="hourly"></div>
-
-      <div class="daily-forecast" id="daily"></div>
-
-      <!-- <div class="chart-container">
-            <div class="chart-title">City Comparison - Air Quality & Weather</div>
-            <div class="chart">
-                <div class="bar-group">
-                    <div class="bar" style="height: 200px;">
-                        <div class="bar-part aqi" style="height: 30%"></div>
-                        <div class="bar-part clear-days" style="height: 70%; bottom: 30%"></div>
-                    </div>
-                    <div class="city-label">London</div>
-                </div>
-                <div class="bar-group">
-                    <div class="bar" style="height: 150px;">
-                        <div class="bar-part aqi" style="height: 10%"></div>
-                        <div class="bar-part clear-days" style="height: 90%; bottom: 10%"></div>
-                    </div>
-                    <div class="city-label">Paris</div>
-                </div>
-                <div class="bar-group">
-                    <div class="bar" style="height: 100px;">
-                        <div class="bar-part aqi" style="height: 20%"></div>
-                        <div class="bar-part clear-days" style="height: 80%; bottom: 20%"></div>
-                    </div>
-                    <div class="city-label">Berlin</div>
-                </div>
-                <div class="bar-group">
-                    <div class="bar" style="height: 180px;">
-                        <div class="bar-part aqi" style="height: 25%"></div>
-                        <div class="bar-part clear-days" style="height: 75%; bottom: 25%"></div>
-                    </div>
-                    <div class="city-label">Istanbul</div>
-                </div>
-                <div class="bar-group">
-                    <div class="bar" style="height: 50px;">
-                        <div class="bar-part aqi" style="height: 5%"></div>
-                        <div class="bar-part clear-days" style="height: 95%; bottom: 5%"></div>
-                    </div>
-                    <div class="city-label">Dubai</div>
-                </div>
-                <div class="bar-group">
-                    <div class="bar" style="height: 220px;">
-                        <div class="bar-part aqi" style="height: 40%"></div>
-                        <div class="bar-part clear-days" style="height: 60%; bottom: 40%"></div>
-                    </div>
-                    <div class="city-label">Abu Dhabi</div>
-                </div>
-            </div>
-            <div class="chart-legend">
-                <div class="legend-item">
-                    <div class="legend-color" style="background-color: #ff6b6b;"></div>
-                    <span>AQI 60</span>
-                </div>
-                <div class="legend-item">
-                    <div class="legend-color" style="background-color: #4ecdc4;"></div>
-                    <span>Clear Days 79%</span>
-                </div>
-            </div> -->
+    <div class="search-bar">
+      <input type="text" placeholder="Search City...🔍" id="search-input" />
     </div>
 
-    <div class="map-section">
-      <div class="map-header-inline">
-        <div class="map-title">
-          <span class="map-icon">🗺️</span>
-          <h3>select the city</h3>
-        </div>
-        <span class="map-hint">Click on the map to view the weather.</span>
+    <div class="header-icons">
+      <div class="lang-selector">
+        <button class="lang-btn active" data-lang="tr">Tr</button>
+        <button class="lang-btn" data-lang="fa">Ir</button>
+        <button class="lang-btn" data-lang="en">En</button>
       </div>
-      <div id="weather-map"></div>
+
+      <button class="sound-btn" id="sound-toggle">
+        <span class="sound-icon">🔊</span>
+      </button>
+
+      <button class="theme-btn" id="theme-toggle">
+        <span class="theme-icon">🌙</span>
+      </button>
+    </div>
+  </header>
+
+  <div class="weather-card">
+    <div class="card-header">
+      <span class="date">Monday, Jan 26</span>
+      <div id="current-city" class="city-name"></div>
     </div>
 
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-    <script src="js/weather-utils.js"></script>
-    <script src="js/map.js"></script>
-    <script src="js/app.js"></script>
-  </bod>
+    <div class="weather-content">
+      <div class="temp-section">
+        <div class="temperature" id="current-temp"></div>
+        <div class="condition" id="current-condition"></div>
+      </div>
+
+      <div class="weather-icon" id="current-icon"></div>
+
+      <div class="details-section">
+        <div class="wind">Wind: 13 km/h</div>
+        <div id="aqi" class="aqi"></div>
+      </div>
+    </div>
+    <br />
+    <br />
+    <br />
+    <br />
+    <div class="hourly-forecast" id="hourly"></div>
+
+    <div class="daily-forecast" id="daily"></div>
+  </div>
+
+  <div class="aqi-panel">
+    <div class="aqi-panel-header" onclick="toggleAQIPanel()">
+      <div class="header-content">
+        <span class="icon">🌬️</span>
+        <span class="title">Air quality and consumption index</span>
+        <span class="subtitle">View city comparison chart</span>
+      </div>
+      <div class="toggle-icon" id="toggleIcon">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+          <polyline points="6 9 12 15 18 9"></polyline>
+        </svg>
+      </div>
+    </div>
+
+    <div class="aqi-panel-content" id="aqiPanelContent">
+      <div class="panel-body">
+        <div class="cities-input-section">
+          <input type="text" id="aqiCityInput" placeholder="Enter the names of the cities (For example: Kocaeli, Istanbul, Ankara)"
+            onkeypress="if(event.key === 'Enter') loadAQIChart()">
+          <button class="btn-load-chart" onclick="loadAQIChart()">
+            📊 Load chart
+          </button>
+        </div>
+
+        <div class="loading" id="aqiLoading" style="display: none;">
+          <div class="spinner"></div>
+          <span>Receiving air quality information...</span>
+        </div>
+
+        <div class="aqi-summary-cards" id="aqiSummaryCards" style="display: none;">
+        </div>
+
+        <div class="chart-container" id="aqiChartContainer" style="display: none;">
+          <canvas id="aqiChart"></canvas>
+        </div>
+
+        <div class="aqi-details-table" id="aqiDetailsTable" style="display: none;">
+          <table>
+            <thead>
+              <tr>
+                <th>City</th>
+                <th>indicator AQI</th>
+                <th>Status</th>
+                <th>Recommendation</th>
+              </tr>
+            </thead>
+            <tbody id="aqiTableBody">
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="map-section">
+    <div class="map-header-inline">
+      <div class="map-title">
+        <span class="map-icon">🗺️</span>
+        <h3>select the city</h3>
+      </div>
+      <span class="map-hint">Click on the map to view the weather.</span>
+    </div>
+    <div id="weather-map"></div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  <script src="js/weather-utils.js"></script>
+  <script src="js/map.js"></script>
+  <script src="js/app.js"></script>
+</body>
+
 </html>
