--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -138,8 +138,7 @@
 
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-    <script src="js/weather
-    -utils.js"></script>
+    <script src="js/weather-utils.js"></script>
     <script src="js/map.js"></script>
     <script src="js/app.js"></script>
 </bod>
