about us part-1 and responsive

--- a/project/frontend/aboutus.html
+++ b/project/frontend/aboutus.html
@@ -2,13 +2,75 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
 
-<body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-</body>
+
+
+        <title>weather</title>
+
+        <link rel="stylesheet" href="css/style.css" />
+        <link href="./src/output.css" rel="stylesheet" />
+
+        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+    </head>
+
+
+    <body class="text-white about-us-body">
+        <div class="origin-element mt-16 w-316 mx-auto rounded-sm md:h-132">
+            <div class="md:flex person-1-div">
+                <div class="sm:flex ">
+                    <section class="person-1-sect">
+                        <img class="sm:w-54 w-96 person-1-img ml-20 ms:mt-3 mt-3" src="./image/download.jpg" alt="weather">
+                        <div class="person-1 w-96 ml-20 px-4 py-2   sm:w-54 ">
+                            <p>Sina Bahoo 1</p>
+                            <p>Lorem ipsum dolor sit amet consectetur.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur.</p>
+                        </div>
+                    </section>
+                    <section class="person-1-sect">
+                        <img class="sm:w-54 w-96 person-1-img ml-20 mt-3" src="./image/download.jpg" alt="weather">
+                        <div class="person-1 w-96 ml-20 px-4 py-2  sm:w-54 ">
+                            <p>Sina Bahoo 2</p>
+                            <p>Lorem ipsum dolor sit amet consectetur.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur.</p>
+                        </div>
+                    </section>
+                </div>
+                <div class="sm:flex">
+
+                    <section class="person-1-sect">
+                        <img class="sm:w-54 w-96 person-1-img ml-20 mt-3" src="./image/download.jpg" alt="weather">
+                        <div class="person-1 ml-20 px-4 py-2 w-96  sm:w-54 ">
+                            <p>Sina Bahoo 3</p>
+                            <p>Lorem ipsum dolor sit amet consectetur.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur.</p>
+                        </div>
+                    </section>
+
+                    <section class="person-1-sect">
+                        <img class="sm:w-54 w-96 person-1-img ml-20 mt-3" src="./image/download.jpg" alt="weather">
+                        <div class="person-1 ml-20 px-4 py-2 w-96 sm:w-54 ">
+                            <p>Sina Bahoo 4</p>
+                            <p>Lorem ipsum dolor sit amet consectetur.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur.</p>
+                        </div>
+                    </section>
+                </div>
+
+            </div>
+            <!-- <section class="person-1 sm:ml-96 mt-10 px-4 py-2 h-32 sm:w-130 ">
+                <p>Sina Bahoo</p>
+                <p>Lorem ipsum dolor sit. Lorem, ipsum dolor. Lorem, ipsum dolor.</p>
+                <p>Lorem, ipsum.lorem lorem Lorem, ipsum dolor Lorem, ipsum dolor.</p>
+                <p>Lorem, ipsum.lorem lorem Lorem, ipsum dolor Lorem, ipsum dolor.</p>
+            </section> -->
+
+
+
+        </div>
+    </body>
 
 </html>
