--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 </head>
 
-<bod>
+<body class="rigin-body">
     <header class="main-header">
         <div class="logo text-blue-700">AuraWeather</div>
 
@@ -141,6 +141,6 @@
     <script src="js/weather-utils.js"></script>
     <script src="js/map.js"></script>
     <script src="js/app.js"></script>
-</bod>
+</body>
 
 </html>
