اضافه کردن بخش صدا برای هر اب و هوایی و تغییر بخش صدا با تغییر بخش شهر از طریق نقشه و جست و جو

--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -32,7 +32,7 @@
           <button class="lang-btn" data-lang="en">En</button>
         </div>
 
-        <button class="sound-btn sound-toggle" id="sound-toggle">
+        <button class="sound-btn sound-toggle">
           <span class="sound-icon">🔊</span>
         </button>
 
@@ -48,8 +48,8 @@
       <div class="language-selector">
         <button class="lang-dropdown-btn" id="langDropdown">
           <span class="selected-lang">
-            <span class="fi fi-ir"></span>
-            <span class="lang-code">IR</span>
+            <span class="fi fi-gb"></span>
+            <span class="lang-code">EN</span>
           </span>
           <span class="dropdown-icon">▼</span>
         </button>
@@ -59,7 +59,7 @@
             <span class="fi fi-ir"></span>
             <span class="lang-name">فارسی (IR)</span>
           </button>
-          <button class="lang-option" data-lang="en" data-flag="gb" data-code="EN">
+          <button class="lang-option active:" data-lang="en" data-flag="gb" data-code="EN">
             <span class="fi fi-gb"></span>
             <span class="lang-name">English (EN)</span>
           </button>
@@ -186,7 +186,7 @@
     <div id="weather-map"></div>
   </div>
 
-  <button class="sound-btn sound-toggle" id="sound-toggle">
+  <button class="sound-btn sound-toggle">
     <span class="sound-icon">🔊</span>
   </button>
 
